# echo-chat

./: .env.example  .gitignore  PRD.md  README.md  docker-compose.yml  start.sh  stop.sh
.github/workflows/: release.yml
PRDs/: 1.1.md  1.2.md  1.3.md  digest.txt
backend/: .env.example  Dockerfile  main.py  pyproject.toml  run.py  test_deepgram.py
backend/src/echo_chat_backend/: exceptions.py  main.py
backend/src/echo_chat_backend/config/: audio.py  llm.py
backend/src/echo_chat_backend/core/: __init__.py  config_manager.py  provider_registry.py
backend/src/echo_chat_backend/providers/: README.md  __init__.py  claude_llm_provider.py  whisper_stt_provider.py
backend/src/echo_chat_backend/services/: llm_service.py  stt_service.py  stt_service_simple.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: audio_capture.rs  main.rs  system_audio.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AudioDeviceSelector.tsx  AudioVisualizer.tsx  ChatInterface.tsx  ProviderSelector.tsx  SettingsModal.tsx  SystemAudioSelector.tsx  TranscriptSidebar.tsx
frontend/src/config/: app.ts  audio.ts  websocket.ts
frontend/src/hooks/: useAudioRecorder.ts  useProviders.ts  useSystemAudio.ts  useWebAudio.ts  useWebSocket.ts
frontend/src/services/: providerService.ts
frontend/src/types/: index.ts
frontend/src/utils/: srtExport.ts  tauri.ts
(+2 files in other folders)
