[package]
name = "echo-chat-desktop"
version = "1.2.0"
description = "EchoChat Desktop - AI-powered voice transcription and chat"
authors = ["Echo Chat Team"]
license = "MIT"
repository = "https://github.com/your-repo/echo-chat"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
hound = "3.5"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
